last message test

--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-this is test file
-<<<<<<< HEAD
-
-this is so big and doing second time
-=======
-<<<<<<< HEAD
-=======
-
-sd
-
-ads
-ad
-dadddd
-d
-<<<<<<< HEAD
-
-Bengalore city
-=======
-jjpo
-buhn
->>>>>>> 95a9c2ae1400ccea3b1a7b168e078e46f03912d9
->>>>>>> b281f111c936fa7c718faa4882f2bedcf8bff6c4
+This is last meesage
