--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
-<<<<<<< HEAD
-this is test file
-<<<<<<< HEAD
-=======
+public class ReverseNumberExample1   
+{  
+public static void main(String[] args)   
+{  
+int number = 987654, reverse = 0;  
+while(number != 0)   
+{  
+int remainder = number % 10;  
+reverse = reverse * 10 + remainder;  
+number = number/10;  
+}  
+System.out.println("The reverse of the given number is: " + reverse);  
+}  
+}  
+Output
 
-sd
+The reverse of the given number is: 456789
+Reverse a number using for loop
+In the following program, we have replaced the while loop by a for loop. It also removes the last digit of the number, after each iteration. When the condition, number!=0 becomes false, the loop exits and we get the reversed number.
 
-ads
-ad
-dadddd
-d
-<<<<<<< HEAD
+ReverseNumberExample2.java
 
-Bengalore city
-=======
-jjpo
-buhn
->>>>>>> 95a9c2ae1400ccea3b1a7b168e078e46f03912d9
-=======
-This is last meesage
-
-thi is another last line
->>>>>>> d2e0a4ef5264b128814f43f20b6bf26cf4839f0f
+public class ReverseNumberExample2   
+{  
+public static void main(String[] args)   
+{  
+int number = 123456, reverse = 0;  
+//we have not mentioned the initialization part of the for loop  
+for( ;number != 0; number=number/10)   
+{  
+int remainder = number % 10;  
+reverse = reverse * 10 + remainder;  
+}  
+System.out.println("The reverse of the given number is: " + reverse);  
+}  
+}  
